# Register

./: .cvsignore  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL.register  Makefile  Makefile.am  Makefile.include  Makefile.include.in  NEWS  README  README.CVS  TODO  autogen.sh  common_include.h  config.h.cmake  configure.in  epm-header.in  global_variables.h  make_object_list  mni_Register.epm.header  register_UI.globals
Documentation/: Changes.list  Free_format.txt  Makefile  register.1  register.man1  register.md  register.txt  to_dos
Functionality/: Makefile  Makefile.am  Makefile.objects
Functionality/Include/: Functionality_prototypes.h  global_variables.h  main_struct.h  register.h
Functionality/initialize/: Makefile.am  initialize.c  main.c
Functionality/slices/: Makefile.am  colour_map.c  create_slice.c  cursor.c  initialize_slice.c  resample.c  save_image.c  set_volume.c  slices.c  updates.c
Functionality/tags/: Makefile.am  matrix_basics.c  objects.c  procrustes.c  save_and_load.c  tag_points.c  tag_transform.c
Functionality/update/: Makefile.am  update_window.c
Register_resample/: .cvsignore  Makefile  Makefile.am  ParseArgv.c  ParseArgv.h  mincresample.test  register_resample.c
Tagtoxfm/: .cvsignore  Makefile  Makefile.am  ParseArgv.c  tagtoxfm.c  tagtoxfm.h
UI_calls_F/: Makefile  Makefile.am  Makefile.objects  UI_calls_F.c
UI_calls_F/Include/: UI_calls_F.h  UI_calls_F_prototypes.h
User_interface/: Makefile  Makefile.am  Makefile.objects
User_interface/Include/: User_interface_prototypes.h  events.h  global_variables.h  graphics_window.h  ui_colours.h  ui_struct.h  user_interface.h  viewports.h  widgets.h
User_interface/colour_popup/: Makefile.am  colour_selection.c
User_interface/delete_tags_popup/: Makefile.am  delete_tags.c
User_interface/event_callbacks/: Makefile.am  save_image.c  slice_events.c  tag_events.c  utilities.c  window_events.c
User_interface/event_handling/: Makefile.am  event_callbacks.c  event_loop.c  event_viewports.c  global_events.c  window_events.c
User_interface/filter_popup/: Makefile.am  filter_selection.c
User_interface/input/: Makefile.am  load.c  load_popup.c
User_interface/layout/: Makefile.am  colours.c  layout.c
User_interface/main/: Makefile.am  initialize.c  main.c
User_interface/print_popup/: Makefile.am  print.c
User_interface/quit_popup/: Makefile.am  quit.c
User_interface/resampling/: Makefile.am  resample.c  resample_popup.c
User_interface/slices/: Makefile.am  slices.c
User_interface/transform_popup/: Makefile.am  xform_selection.c
User_interface/value_readout/: Makefile.am  update.c
User_interface/widget_instances/: Makefile.am  colour_bar.c  initialize.c  main_menu_callbacks.c  merged_interface.c  meter.c  position_widgets.c  tag_points.c  volume_interface.c
User_interface/widgets/: Makefile.am  buttons.c  sliders.c  text_entry.c  utilities.c  widgets.c
User_interface/windows/: Makefile.am  lookup.c  popup.c  update.c  xsect.c
m4/: smr_OPTIONAL_LIB.m4  smr_REQUIRED_LIB.m4  smr_WITH_BUILD_PATH.m4
