dnl Process this file with autoconf to produce a configure script.
AC_INIT(common_include.h)
AM_INIT_AUTOMAKE(Register,1.3.3-1)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

smr_WITH_BUILD_PATH

dnl Checks for header files.
AC_PATH_XTRA
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h unistd.h)

dnl Checks for libraries.

smr_REQUIRED_LIB(m,sqrt,math.h)
smr_REQUIRED_LIB(netcdf,ncopen,netcdf.h)
smr_REQUIRED_LIB(minc,miicv_create,minc.h)
smr_REQUIRED_LIB(volume_io,input_volume,volume_io.h)
smr_REQUIRED_LIB(bicpl,input_graphics_file,bicpl.h)

MNI_LIBS="$LIBS"
LIBS=

smr_REQUIRED_LIB(GL,glBegin,GL/gl.h)
smr_REQUIRED_LIB(GLU,gluLookAt,GL/glu.h)
smr_REQUIRED_LIB(glut,glutInit,GL/glut.h,
                 [$X_LIBS $X_PRE_LIBS -lX11 -lXmu $X_EXTRA_LIBS])

GL_LIBS="$LIBS"
LIBS=

AC_SUBST(MNI_LIBS)
AC_SUBST(GL_LIBS)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_CHECK_FUNCS(strtod strtol)

AC_OUTPUT(Makefile 
Functionality/Makefile
Functionality/initialize/Makefile
Functionality/tags/Makefile
Functionality/slices/Makefile
Functionality/update/Makefile
Graphics/Makefile
Graphics/GLUT_windows/Makefile
Graphics/G_graphics/Makefile
Graphics/OpenGL_graphics/Makefile
Register_resample/Makefile 
Tagtoxfm/Makefile
UI_calls_F/Makefile
User_interface/Makefile
User_interface/colour_popup/Makefile
User_interface/delete_tags_popup/Makefile
User_interface/event_callbacks/Makefile
User_interface/event_handling/Makefile
User_interface/filter_popup/Makefile
User_interface/input/Makefile
User_interface/layout/Makefile
User_interface/main/Makefile
User_interface/print_popup/Makefile
User_interface/quit_popup/Makefile
User_interface/resampling/Makefile
User_interface/slices/Makefile
User_interface/transform_popup/Makefile
User_interface/value_readout/Makefile
User_interface/widget_instances/Makefile
User_interface/widgets/Makefile
User_interface/windows/Makefile
)

