SUBDIRS = colour_popup delete_tags_popup event_callbacks \
	event_handling filter_popup input layout main print_popup \
	quit_popup resampling slices transform_popup value_readout \
	widget_instances widgets windows

EXTRA_DIST = Include/User_interface_prototypes.h Include/events.h \
	Include/global_variables.h Include/graphics_window.h \
	Include/ui_colours.h Include/ui_struct.h \
	Include/user_interface.h Include/viewports.h Include/widgets.h
