noinst_LIBRARIES = libdummy.a
libdummy_a_SOURCES = colour_map.c create_slice.c cursor.c initialize_slice.c resample.c save_image.c set_volume.c slices.c updates.c

INCLUDES = -I$(top_srcdir)/Functionality/Include \
	-I$(top_srcdir) \
	-I$(top_srcdir)/UI_calls_F/Include \
	-I$(top_srcdir)/Graphics/Include \
	$(MNI_INCLUDES) $(X_CFLAGS)
