noinst_LIBRARIES = libdummy.a
libdummy_a_SOURCES = colour_bar.c initialize.c main_menu_callbacks.c merged_interface.c meter.c position_widgets.c tag_points.c volume_interface.c

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/User_interface/Include 	-I$(top_srcdir)/UI_calls_F/Include 	-I$(top_srcdir)/Graphics/Include 	$(MNI_INCLUDES) $(X_CFLAGS)
